versions/26.1.2/develop/entities/attributes.md
---
title: Entity Attributes
description: Learn how to add custom attributes to entities.
authors:
  - cassiancc
  - cprodhomme
  - Tenneb22
resources:
  https://minecraft.wiki/w/Attribute: Attributes - Minecraft Wiki
  https://docs.neoforged.net/docs/entities/attributes: Attributes - NeoForge Docs (except Neo exclusives)
---

Attributes determine the properties that your modded entity can possess. Using Fabric, you can create your own custom attributes that enhance gameplay mechanics and apply vanilla ones as well.

## Creating a Custom Attribute {#creating-a-custom-attribute}

Let's create a custom attribute named `AGGRO_RANGE`. This attribute will control the distance an entity can detect and react to potential threats from.

### Defining the Attribute Class {#define-the-attribute-class}

Begin by creating a Java class to manage the definition and registration of your attributes under your mod's code structure. This example will create the following functions in a class named `ModAttributes`.

First, start with a basic helper method to register your mod's attributes. This method will accept the following parameters and register an attribute.

- A `String` that will be the name of your attribute
- A `double` that will be the default value of the attribute
- A `double` that will be the lowest value your attribute will reach
- A `double` that will be the highest value your attribute will reach
- A `boolean` that dictates whether the attribute will be synced to clients

<<< @/reference/26.1.2/src/main/java/com/example/docs/entity/attribute/ModAttributes.java#register

We'll then register an attribute named `AGGRO_RANGE` with the name `aggro_range`, a default value of `8.0`, a minimum value of `0`, and a maximum value set as high as it can be. This attribute will not be synced to players.

<<< @/reference/26.1.2/src/main/java/com/example/docs/entity/attribute/ModAttributes.java#attributes

### Translating Custom Attributes {#attribute-translation}

To display the attribute name in a human-readable format, you must modify `assets/example-mod/lang/en_us.json` to include:

```json
{
  "attribute.name.example-mod.aggro_range": "Aggro Range"
}
```

### Initialization {#initialization}

To make sure the attribute is registered properly, you'll need to ensure it is initialized during mod startup. This can be done by adding a public static initialize method to your class and call it from your [mod's initializer](../getting-started/project-structure#entrypoints) class. Currently, this method doesn't need anything inside it.

<<< @/reference/26.1.2/src/main/java/com/example/docs/entity/attribute/ModAttributes.java#initialize

<<< @/reference/26.1.2/src/main/java/com/example/docs/entity/attribute/ExampleModAttributes.java#init

Calling a method on a class statically initializes it if it hasn't been previously loaded - this means that all `static` fields are evaluated. This is what this dummy `initialize` method is for.

## Applying Attributes {#apply-the-attribute}

Attributes need to be attached to an entity to take effect. This is typically done in the method where an entity's attributes are built or modified.

Vanilla provides attributes as well, including [max health](https://minecraft.wiki/w/Attribute#Max_health), [movement speed](https://minecraft.wiki/w/Attribute#Movement_speed), and [attack damage](https://minecraft.wiki/w/Attribute#Attack_damage). For a full list, see the vanilla `Attributes` class and the [Minecraft Wiki](https://minecraft.wiki/w/Attribute).

This is an example of how to add vanilla attributes and the previously created `AGGRO_RANGE` attribute to the Mini Golem Entity from the [Creating Your First Entity](./first-entity) guide.

<<< @/reference/26.1.2/src/main/java/com/example/docs/entity/MiniGolemEntity.java#attributes

## Reading and Modifying Attributes {#reading-modifying-attributes}

An attribute by itself is just data attached to an entity. For it to be useful, we need to be able to read from and write to it. There are two main ways to do this: getting the `AttributeInstance` on the entity, or getting the value directly.

<<< @/reference/26.1.2/src/gametest/java/com/example/docs/entity/EntityAttributesGameTest.java#reading_entity_attributes

An `AttributeInstance` allows more flexibility, such as setting an `AttributeModifier` on the attribute, using one of the [three vanilla attribute modifier operations](https://minecraft.wiki/w/Attribute#Operations). Modifiers can be permanent (saved to NBT) or transitive (not saved to NBT) and are added using `addPermanentModifier` or `addTransitiveModifier`, respectively.

<<< @/reference/26.1.2/src/gametest/java/com/example/docs/entity/EntityAttributesGameTest.java#modifying_entity_attributes

Once you have access to the attribute value, you can use it in your entity's AI.
